--- a/Source code/Test/App.xaml
+++ b/Source code/Test/App.xaml
@@ -2,4 +2,28 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml" Startup="StartupHandler">
+    <Application.Resources>
+        <GeometryGroup x:Key="SampleIcon16px">
+            <RectangleGeometry Rect="2.5,2.5,1,1"/>
+            <RectangleGeometry Rect="7.5,2.5,1,1"/>
+            <RectangleGeometry Rect="12.5,2.5,1,1"/>
+            <RectangleGeometry Rect="2.5,7.5,1,1"/>
+            <RectangleGeometry Rect="7.5,7.5,1,1"/>
+            <RectangleGeometry Rect="12.5,7.5,1,1"/>
+            <RectangleGeometry Rect="2.5,12.5,1,1"/>
+            <RectangleGeometry Rect="7.5,12.5,1,1"/>
+            <RectangleGeometry Rect="12.5,12.5,1,1"/>
+        </GeometryGroup>
+        <GeometryGroup x:Key="SampleIcon24px">
+            <RectangleGeometry Rect="2.5,2.5,3,3"/>
+            <RectangleGeometry Rect="10.5,2.5,3,3"/>
+            <RectangleGeometry Rect="18.5,2.5,3,3"/>
+            <RectangleGeometry Rect="2.5,10.5,3,3"/>
+            <RectangleGeometry Rect="10.5,10.5,3,3"/>
+            <RectangleGeometry Rect="18.5,10.5,3,3"/>
+            <RectangleGeometry Rect="2.5,18.5,3,3"/>
+            <RectangleGeometry Rect="10.5,18.5,3,3"/>
+            <RectangleGeometry Rect="18.5,18.5,3,3"/>
+        </GeometryGroup>
+    </Application.Resources>
 </Application>
