--- a/Source code/Test/MainWindow.xaml
+++ b/Source code/Test/MainWindow.xaml
@@ -28,70 +28,70 @@
                         <MenuItem Header="Blue"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource BlueBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Blue}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Brown"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource BrownBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Brown}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Green"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource GreenBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Green}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Lime"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource LimeBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Lime}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Magenta"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource MagentaBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Magenta}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Orange"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource OrangeBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Orange}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Pink"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource PinkBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Pink}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Purple"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource PurpleBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Purple}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Red"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource RedBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Red}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
                         <MenuItem Header="Viridian"
                                   Click="AccentClick">
                             <MenuItem.Icon>
-                                <Rectangle Fill="{DynamicResource ViridianBrush}"
+                                <Rectangle Fill="{x:Static metro:AccentBrushes.Viridian}"
                                            Width="16" Height="16"/>
                             </MenuItem.Icon>
                         </MenuItem>
