--- a/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
+++ b/Source code/Theme/Themes/Buttons/CommandButtonBase.xaml
@@ -10,7 +10,7 @@
     <Style x:Key="{x:Type primitives:CommandButtonBase}" TargetType="{x:Type primitives:CommandButtonBase}">
         
         <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource LowlightBrush}"/>
         <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.SemiBoldThickness), Mode=OneWay}"/>
         <Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
         <Setter Property="FontSize" Value="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.ContentFontSize), Mode=OneWay}"/>
@@ -18,7 +18,7 @@
         <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
 
-        <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource MiddleLightBrush}"/>
+        <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource LowlightBrush}"/>
         
         <Setter Property="FocusVisualStyle" Value="{StaticResource FocusVisualStyle}"/>
 
@@ -30,7 +30,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type primitives:CommandButtonBase}">
 
-                    <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                    <Grid Background="{DynamicResource TransparentBrush}"
+                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="Auto"/>
@@ -90,12 +91,12 @@
 
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="BorderBrush" Value="{DynamicResource LowlightBrush}"/>
-                <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource LowlightBrush}"/>
-            </Trigger>
-            <Trigger Property="IsPressed" Value="True">
                 <Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}"/>
                 <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource ForegroundBrush}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
+                <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource MiddleLightBrush}"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{DynamicResource BackgroundBrush}"/>
