--- a/Source code/Theme/Documentation/ru/Elysium.tt
+++ b/Source code/Theme/Documentation/ru/Elysium.tt
@@ -35,6 +35,17 @@
 	paths.Add(@"Converters\DoubleToThicknessConverter.ru.xml");
 	paths.Add(@"Converters\ThicknessToDoubleConverter.ru.xml");
 	
+	paths.Add(@"Controls\ApplicationBar\ApplicationBarDock.ru.xml");
+	paths.Add(@"Controls\ApplicationBar\ApplicationBarTransitionMode.ru.xml");
+	
+	paths.Add(@"Controls\CommandButtons\DropDownDirection.ru.xml");
+	
+	paths.Add(@"Controls\ProgressBars\ProgressBarState.ru.xml");
+	
+	paths.Add(@"Controls\ToastNotification\ToastNotificationAnimation.ru.xml");
+	paths.Add(@"Controls\ToastNotification\HorizontalPlacement.ru.xml");
+	paths.Add(@"Controls\ToastNotification\VerticalPlacement.ru.xml");
+	
 	var documentation = new XDocument(new XDeclaration("1.0", "utf-8", "yes"));
 	
 	var doc = new XElement("doc");
