- ToastNotification service reorganization started - Added Russian documentation for Progress bars and ToggleSwitch - Fixed errors in Russian documentation - Fixed some attributes - Added some new property change notification methods

--- a/Source code/Theme/Documentation/ru/Elysium.tt
+++ b/Source code/Theme/Documentation/ru/Elysium.tt
@@ -68,6 +68,12 @@
     paths.Add(@"Controls\CommandButtons\ToggleCommandButton.ru.xml");
 
     paths.Add(@"Controls\Menus\Submenu.ru.xml");
+
+    paths.Add(@"Controls\ProgressBars\Primitives\ProgressBarBase.ru.xml");
+    paths.Add(@"Controls\ProgressBars\LinearProgressBar.ru.xml");
+    paths.Add(@"Controls\ProgressBars\CircularProgressBar.ru.xml");
+
+    paths.Add(@"Controls\ToggleSwitch\ToggleSwitch.ru.xml");
     
     var documentation = new XDocument(new XDeclaration("1.0", "utf-8", "yes"));
     
