--- a/Source code/Theme/Themes/Windows/Window.xaml
+++ b/Source code/Theme/Themes/Windows/Window.xaml
@@ -73,7 +73,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="Auto"/>
                                     <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="90"/>
+                                    <ColumnDefinition Width="Auto"/>
                                 </Grid.ColumnDefinitions>
                                 <controls:LinearProgressBar x:Name="PART_ProgressBar"
                                                             Grid.ColumnSpan="3"
